@@ -1,7 +1,7 @@
 class RunnersController < ApplicationController
   before_filter :authenticate_user!
   before_filter :project
-  before_filter :set_runner, only: [:edit, :update, :destroy, :pause, :resume]
+  before_filter :set_runner, only: [:edit, :update, :destroy, :pause, :resume, :show]
   before_filter :authorize_access_project!
   before_filter :authorize_manage_project!
 
@@ -48,6 +48,9 @@ class RunnersController < ApplicationController
     else
       redirect_to project_runners_path(@project, @runner), alert: 'Runner was not updated.'
     end
+  end
+
+  def show
   end
 
   protected
