@@ -1,0 +1,64 @@
+= content_for :title do
+  %h3.project-title
+    Runner ##{@runner.id}
+    .pull-right
+      - if @runner.shared?
+        %span.runner-state.runner-state-shared
+          Shared
+      - else
+        %span.runner-state.runner-state-specific
+          Specific
+
+%table.table
+  %thead
+    %tr
+      %th Property Name
+      %th Value
+  %tr
+    %td
+      Tags
+    %td
+      - @runner.tag_list.each do |tag|
+        %span.label.label-primary
+          = tag
+  %tr
+    %td
+      Name
+    %td
+      = @runner.name
+  %tr
+    %td
+      Varsion
+    %td
+      = @runner.version
+  %tr
+    %td
+      Revision
+    %td
+      = @runner.revision
+  %tr
+    %td
+      Platform
+    %td
+      = @runner.platform
+  %tr
+    %td
+      Architecture
+    %td
+      = @runner.architecture
+  %tr
+    %td
+      Description
+    %td
+      = @runner.description
+  %tr
+    %td
+      Last contact
+    %td
+      - if @runner.contacted_at
+        #{time_ago_in_words(@runner.contacted_at)} ago
+      - else
+        Never
+
+
+      
